# sysmonitor

./: README.md  __init__.py  example.py  pyproject.toml  sysmonitor.py
dependencies/: models.py
src/: __init__.py  sysmonitor.py
src/models/: __init__.py  measurement.py  system_data.py  system_measurement.py
sysmonitor/: __init__.py  models.py  sysmonitor.py
