[tool.poetry]
name = "sysmonitor"
version = "0.1.0"
description = ""
authors = ["Dave <55182282+dvsu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.0"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # Pyflakes
  "I",    # isort  
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "W"     # pycodestyle warnings
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
